--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -2,7 +2,7 @@
 
 ; db configuration
 [db]
-uri       = sqlite://storage.sqlite
+uri       = postgres://web2py:clave@127.0.0.1/storephone
 migrate   = 1
 pool_size = 1
 
@@ -16,4 +16,4 @@ login  = username:password
 ; form styling
 [forms]
 formstyle = bootstrap3_inline
-separator = 
+separator =
